// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: SyntaxHighlighter should match snapshot 1`] = `
<div>
  <pre
    class="css-1qg9ou7-SyntaxHighlighter"
  >
    <code
      class="language-javascript css-dytyo9-SyntaxHighlighter"
    >
      <span
        class="hljs-variable language_ css-g89m8z-Box"
        style="color: rgb(171, 86, 86);"
      >
        <span>
          console
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          .
        </span>
      </span>
      <span
        class="hljs-title function_ css-g89m8z-Box"
        style="color: rgb(136, 0, 0); font-weight: bold;"
      >
        <span>
          log
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          (
        </span>
      </span>
      <span
        class="hljs-string css-g89m8z-Box"
        style="color: rgb(136, 0, 0);"
      >
        <span>
          "Hello World"
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          )
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`Components: SyntaxHighlighter should match snapshot when styleName is not defaultStyle 1`] = `
<div>
  <pre
    class="css-1blygkj-SyntaxHighlighter"
  >
    <code
      class="language-javascript css-dytyo9-SyntaxHighlighter"
    >
      <span
        class="hljs-variable language_ css-g89m8z-Box"
        style="color: rgb(255, 160, 122);"
      >
        <span>
          console
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          .
        </span>
      </span>
      <span
        class="hljs-title function_ css-g89m8z-Box"
        style="color: rgb(0, 224, 224);"
      >
        <span>
          log
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          (
        </span>
      </span>
      <span
        class="hljs-string css-g89m8z-Box"
        style="color: rgb(171, 227, 56);"
      >
        <span>
          "Hello World"
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          )
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`Components: SyntaxHighlighter should match snapshot when wrapLines is true 1`] = `
<div>
  <pre
    class="css-1qg9ou7-SyntaxHighlighter"
  >
    <code
      class="language-javascript css-1fq9u91-SyntaxHighlighter"
    >
      <span
        class="hljs-variable language_ css-g89m8z-Box"
        style="color: rgb(171, 86, 86);"
      >
        <span>
          console
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          .
        </span>
      </span>
      <span
        class="hljs-title function_ css-g89m8z-Box"
        style="color: rgb(136, 0, 0); font-weight: bold;"
      >
        <span>
          log
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          (
        </span>
      </span>
      <span
        class="hljs-string css-g89m8z-Box"
        style="color: rgb(136, 0, 0);"
      >
        <span>
          "Hello World"
        </span>
      </span>
      <span
        class="css-g89m8z-Box"
      >
        <span>
          )
        </span>
      </span>
    </code>
  </pre>
</div>
`;
